[package]
name = "juniper_compose_macros_ng"
description = "Macros for juniper_compose_ng crate"
categories = []
version = "0.16.3"
authors = ["tom-miy <26715699+tom-miy@users.noreply.github.com>"]
license = "MIT"
edition = "2024"
documentation = "https://docs.rs/juniper-compose"
repository = "https://github.com/tom-miy/juniper-compose"
keywords = []

[lib]
proc-macro = true

[dependencies]
heck = "0.5.0"
proc-macro2 = "1.0.80"
quote = "1.0.30"
syn = { version = "2.0.104", features = ["full"] }
