[package]
name = "juniper_compose_ng"
description = "Merge multiple Juniper object definitions into one (Juniper 0.16 compatible fork)"
categories = ["web-programming"]
version = "0.16.3"
authors = ["tom-miy < 26715699+tom-miy@users.noreply.github.com>"]
license = "MIT"
edition = "2024"
documentation = "https://docs.rs/juniper-compose"
repository = "https://github.com/tom-miy/juniper-compose"
keywords = ["juniper", "compose", "merge"]

[dependencies]
juniper = { version = "0.16.2" }
juniper_compose_macros_ng = { version = "0.16.3", path = "../juniper-compose-macros" }
